# blimp_c2s2

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  conftest.py  dir_brainstorm.txt  lint  setup.sh  verible_flags.txt  verilator_waivers.vlt
.github/workflows/: docs.yml
app/: CMakeLists.txt  riscv_test.cpp  test
app/adventure/: README.md  advent4.h  adventure.c  database.c  english.c  itverb.c  turn.c  verb.c
app/cmake/: rv32.cmake
app/demo/: CMakeLists.txt  demo.cpp
app/echo/: echo.cpp
app/hello/: hello.cpp
app/scripts/: blimp.ld  crt0.S  tinyrv2.ld
app/sqrt/: sqrt-iter-adhoc.c  sqrt-recur-adhoc.c
app/ubmark/: CMakeLists.txt  bsearch.cpp  vvadd.cpp
app/utils/: blimp_exit.cpp  blimp_exit.h  blimp_misc.cpp  blimp_misc.h  blimp_rand.cpp  blimp_rand.h  blimp_stats.cpp  blimp_stats.h  blimp_stdio.cpp  blimp_stdio.h  blimp_stdlib.h  blimp_string.cpp  blimp_string.h  blimp_wprintf.c  blimp_wprintf.cpp  blimp_wprintf.h
app/vvadd/: CMakeLists.txt  vvadd.cpp
asm/: assemble.cpp  assemble.v  disassemble.cpp  disassemble.v  fields.cpp  fields.h  inst.cpp  inst.h
cmake/: CMakeDetermineVerilogCompiler.cmake  CMakeVerilogCompiler.cmake.in  CMakeVerilogInformation.cmake  vdeps.cmake  verilator.cmake  vlint.cmake
components/: lint  pytest.ini
components/hw/common/: Fifo.v
components/hw/fetch/: Fetch.v
components/intf/: F__D.v  Mem.v  MemIntf.v  StreamIntf.v
defs/: ISA.v  UArch.v
docs/: conf.py  index.rst
docs/_static/css/: table.css
docs/draw.io/: seq_nums.drawio
docs/impls/: versions.rst
docs/impls/img/: versions.drawio
docs/overview/: versions.rst
docs/overview/img/: versions.drawio
docs/uarch/: seq_nums.md  seq_nums.rst
fl/: FLInst.cpp  FLInst.h  FLMem.cpp  FLMem.h  FLPeripheral.cpp  FLProc.cpp  FLProc.h  FLRegfile.cpp  FLTrace.cpp  FLTrace.h  fl_peripherals.cpp  fl_peripherals.h  fl_peripherals.v  fl_sim.cpp  fl_vtrace.cpp  fl_vtrace.h  fl_vtrace.v  parse_elf.cpp
fl/peripherals/: FLExit.cpp  FLExit.h  FLTerminal.cpp  FLTerminal.h
fpga/: FPGAMem.v  Mem.v  MemSubSys.v  MemXBar.v  PeripheralMemServer.v
fpga/net/: MemNetReq.v  MemNetResp.v  ReqArbiter.v  ReqRouter.v  RespArbiter.v  RespRouter.v
fpga/protocols/ps2/: Keyboard.v
fpga/protocols/vga/: CharBuf.v  CharDisplay.v  CharLUT.v  VGADriver.v
fpga/ps2/: Keyboard.v  ScanCodeFilter.v
fpga/spi/: SPIBitwise.v  SPIMemClient.v  SPIMinion.v  SPISynchronizer.v
fpga/test/: CharBuf_test.v  CharLUT_test.v
fpga/util/: Synchronizer.v
fpga/vga/: CharBuf.v  CharDisplay.v  VGADriver.v
framework/: cocotb.py
hw/common/: DelayStream.v  Fifo.v  Mux.v  PriorityEncoder.v  RRArb.v
hw/common/test/: Fifo_test.py  Fifo_test.v  Mux_test.v  PriorityEncoder_test.v  RRArb_test.v
hw/decode/: Decode.v  Regfile.v
hw/decode/decode_variants/: Basic.v  DecodeBasic.v
hw/decode/test/: ImmGen_test.v  Regfile_test.v
hw/decode_issue/: Decode.v  DecodeIssue.v  Decoder.v  ImmGen.v  InstDecoder.v  InstDecoderL1.v  InstRouter.v  ROB.v  Regfile.v  RegfilePending.v  RenameTable.v  SeqNumCompare.v  SeqNumGen.v
hw/decode_issue/decode_issue_unit_variants/: DecodeIssueUnitL1.v  DecodeIssueUnitL2.v  DecodeIssueUnitL3.v  DecodeIssueUnitL4.v  DecodeIssueUnitL5.v
hw/decode_issue/decode_issue_variants/: DecodeBasic.v
hw/decode_issue/decode_variants/: DecodeBasic.v
hw/decode_issue/decoder_variants/: DecoderRV32.v
hw/decode_issue/rename_table/: RenameTable.v
hw/decode_issue/test/: DecodeBasic_arith_test.v  DecodeBasic_test.v  DecodeIssueUnitL1_test.v  DecodeIssueUnitL2_test.v  DecodeIssueUnitL3_test.v  DecodeIssueUnitL4_test.v  DecodeIssueUnitL5_test.v  DecodeIssue_arith_test.v  ImmGen_test.v  RegfilePending_test.v  Regfile_test.v  RenameTable_test.v  SeqNumCompare_test.v  SeqNumGen_test.v
hw/decode_issue/variants/: DecodeBasic.v
hw/execute/: ExQueue.v  Execute.v
hw/execute/execute_units_l1/: ALU.v  ALUL1.v  Multiplier.v  MultiplierL1.v
hw/execute/execute_units_l2/: IterativeMultiplierL2.v  PipelinedMultiplier.v  PipelinedMultiplierL2.v
hw/execute/execute_units_l3/: LoadStoreUnit.v  LoadStoreUnitL3.v
hw/execute/execute_units_l4/: ControlFlowUnit.v  ControlFlowUnitL4.v  LoadStoreUnit.v
hw/execute/execute_units_l5/: ControlFlowUnitL5.v
hw/execute/execute_units_l6/: ALUL6.v  ControlFlowUnitL6.v
hw/execute/execute_units_l7/: IterativeMulDivRemL7.v  LoadStoreUnitL7.v
hw/execute/execute_units_l8/: ALUF.v
hw/execute/execute_variants/: ALU.v  Multiplier.v
hw/execute/test/: ALU_test.v  ExQueue_test.v  Multiplier_test.v
hw/fetch/: Fetch.v  SeqNumGenL2.v  SeqNumGenL3.v
hw/fetch/fetch_unit_variants/: FetchUnitL1.v  FetchUnitL2.v  FetchUnitL3.v
hw/fetch/flat/: Fetch_flat.v
hw/fetch/test/: DecodeTestIntf.py  FetchUnitL1_test.v  FetchUnitL2_test.v  FetchUnitL3_test.v  Fetch_test.py  Fetch_test.v  (+2 more)
hw/seq_num/: SeqNumUnit.v  SequencingUnitL1.v
hw/squash/: SquashUnitL1.v  SquashUnitL1Chain.v
hw/top/: BlimpBasic.v  BlimpV1.v  BlimpV2.v  BlimpV3.v  BlimpV4.v  BlimpV5.v  BlimpV6.v  BlimpV7.v  BlimpV8.v  BlimpVdemo.v
hw/util/: DelayStream.v  SeqAge.v  SeqArb.v
hw/writeback_commit/: ROB.v  WritebackCommit.v
intf/: CommitNotif.v  CompleteNotif.v  D__XIntf.v  F__D.v  F__DIntf.v  InstTraceNotif.v  MemIntf.v  OpDeqFrontIntf.v  OpInsIntf.v  SquashNotif.v  WritebackNotif.v  X__WIntf.v
intf/seq_num/: SeqNumAgeIntf.v  SeqNumAllocIntf.v  SeqNumFreeIntf.v
playground/gcd/: GcdUnit-test.py  GcdUnit.v  temp.txt
test/: FLTestUtils.v  TestUtils.v  TraceUtils.v  sim.cpp
test/asm/: assemble.cpp  assemble.h  assemble.v  disassemble.cpp  disassemble.h  disassemble.v  fields.cpp  fields.h  inst.cpp  inst.h
test/fl/: CommitTestSub.v  D__XTestD.v  D__XTestX.v  DecodeTestIntf.v  F__DTestD.v  F__DTestF.v  InstTraceSub.v  MemIntfTestServer.v  MemIntfTestServer_2Port.v  TestCaller.v  TestIstream.v  TestOstream.v  TestPub.v  TestSub.v  WritebackTestSub.v  X__WTestW.v  X__WTestX.v
test/fl_proc/: FLInst.cpp  FLInst.h  FLMem.cpp  FLMem.h  FLProc.cpp  FLProc.h  FLRegfile.cpp  FLRegfile.h  FLTrace.cpp  FLTrace.h
tools/: requirements.txt  rvelfdump.cpp  spi_flash
types/: MemMsg.v
(+268 files in other folders)
